force-app/main/default/objects/ScrapTruckSupplier__c/ScrapTruckSupplier__c.object-meta.xml
<CustomObject>
    <label>Автомобілі постачальників</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ScrapTruckSupplier</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>