force-app/main/default/objects/ScrapTruckSupplier__c/fields/TruckMode__c.field-meta.xml
<CustomField>
    <fullName>TruckMode__c</fullName>
    <formula>ScrapTruck__r.TruckModel__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TruckMode</label>
    <type>Text</type>
</CustomField>