force-app/main/default/objects/ScrapTruckSupplier__c/fields/TruckType__c.field-meta.xml
<CustomField>
    <fullName>TruckType__c</fullName>
    <formula>IF(TEXT(ScrapTruck__r.TruckType__c)=&apos;Truck&apos;,&apos;Тягач&apos;,&apos;Причеп&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TruckType</label>
    <type>Text</type>
</CustomField>